RESOLVED FIXED163642
[Xcode] JavaScriptCore fails to build when CLANG_WARN_DOCUMENTATION_COMMENTS is enabled
https://bugs.webkit.org/show_bug.cgi?id=163642
Summary [Xcode] JavaScriptCore fails to build when CLANG_WARN_DOCUMENTATION_COMMENTS ...
mitz
Reported 2016-10-18 19:09:15 PDT
The compiler doesn’t like some of the documentation comments in the headers.
Attachments
Enable and address documentation warnings (15.92 KB, patch)
2016-10-18 19:17 PDT, mitz
no flags
mitz
Comment 1 2016-10-18 19:17:14 PDT
Created attachment 292025 [details] Enable and address documentation warnings
WebKit Commit Bot
Comment 2 2016-10-18 19:19:30 PDT
Attachment 292025 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/API/JSValueRef.h:96: The parameter name "value" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSContextRefInternal.h:53: The parameter name "runLoop" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSWeakObjectMapRefPrivate.h:67: The parameter name "map" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSWeakObjectMapRefPrivate.h:67: The parameter name "object" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSContextRefPrivate.h:88: The parameter name "group" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSContextRefPrivate.h:88: The parameter name "callback" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/API/JSContextRefPrivate.h:95: The parameter name "group" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 7 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2016-10-19 10:21:11 PDT
Comment on attachment 292025 [details] Enable and address documentation warnings Clearing flags on attachment: 292025 Committed r207542: <http://trac.webkit.org/changeset/207542>
WebKit Commit Bot
Comment 4 2016-10-19 10:21:15 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 5 2016-10-19 10:41:31 PDT
Note You need to log in before you can comment on or make changes to this bug.