Source/JavaScriptCore/API/JSManagedValue.h
@@ -54,7 +54,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JSManagedValue from a JSValue.
-@param value
 @result The new JSManagedValue.
 */
 + (JSManagedValue *)managedValueWithValue:(JSValue *)value;
@@ -63,7 +62,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JSManagedValue.
-@param value
 @result The new JSManagedValue.
 */
 - (instancetype)initWithValue:(JSValue *)value;
