Source/JavaScriptCore/API/JSTypedArray.h
@@ -156,7 +156,7 @@ JS_EXPORT JSObjectRef JSObjectMakeArrayBufferWithBytesNoCopy(JSContextRef ctx, v
 /*!
  @function
  @abstract         Returns a pointer to the data buffer that serves as the backing store for a JavaScript Typed Array object.
- @param buffer     The Array Buffer object whose internal backing store pointer to return.
+ @param object     The Array Buffer object whose internal backing store pointer to return.
  @param exception  A pointer to a JSValueRef in which to store an exception, if any. Pass NULL if you do not care to store an exception.
  @result           A pointer to the raw data buffer that serves as object's backing store or NULL if object is not an Array Buffer object.
  @discussion       The pointer returned by this function is temporary and is not guaranteed to remain valid across JavaScriptCore API calls.
