Source/JavaScriptCore/API/JSValue.h
@@ -68,7 +68,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JavaScript value from a BOOL primitive.
-@param value
 @param context The JSContext in which the resulting JSValue will be created.
 @result The new JSValue representing the equivalent boolean value.
 */
@@ -77,7 +76,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JavaScript value from a double primitive.
-@param value
 @param context The JSContext in which the resulting JSValue will be created.
 @result The new JSValue representing the equivalent boolean value.
 */
@@ -86,7 +84,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JavaScript value from an <code>int32_t</code> primitive.
-@param value
 @param context The JSContext in which the resulting JSValue will be created.
 @result The new JSValue representing the equivalent boolean value.
 */
@@ -95,7 +92,6 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 /*!
 @method
 @abstract Create a JavaScript value from a <code>uint32_t</code> primitive.
-@param value
 @param context The JSContext in which the resulting JSValue will be created.
 @result The new JSValue representing the equivalent boolean value.
 */
@@ -364,28 +360,29 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 - (void)setValue:(id)value atIndex:(NSUInteger)index;
 
 /*!
-@methodgroup Checking JavaScript Types
+@functiongroup Checking JavaScript Types
 */
+
 /*!
-@method
+@property
 @abstract Check if a JSValue corresponds to the JavaScript value <code>undefined</code>.
 */ 
 @property (readonly) BOOL isUndefined;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue corresponds to the JavaScript value <code>null</code>.
 */
 @property (readonly) BOOL isNull;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is a boolean.
 */
 @property (readonly) BOOL isBoolean;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is a number.
 @discussion In JavaScript, there is no differentiation between types of numbers.
  Semantically all numbers behave like doubles except in special cases like bit
@@ -394,25 +391,25 @@ NS_CLASS_AVAILABLE(10_9, 7_0)
 @property (readonly) BOOL isNumber;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is a string.
 */
 @property (readonly) BOOL isString;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is an object.
 */
 @property (readonly) BOOL isObject;
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is an array.
 */ 
 @property (readonly) BOOL isArray NS_AVAILABLE(10_11, 9_0);
 
 /*!
-@method
+@property
 @abstract Check if a JSValue is a date.
 */ 
 @property (readonly) BOOL isDate NS_AVAILABLE(10_11, 9_0);
@@ -592,8 +589,6 @@ Create a JSValue from a CGRect.
 /*!
 @method
 @abstract Creates a JSValue, wrapping its C API counterpart.
-@param value
-@param context
 @result The Objective-C API equivalent of the specified JSValueRef.
 */
 + (JSValue *)valueWithJSValueRef:(JSValueRef)value inContext:(JSContext *)context;
