Source/JavaScriptCore/API/JSValueRef.h
@@ -93,7 +93,7 @@ extern "C" {
 @param value    The JSValue whose type you want to obtain.
 @result         A value of type JSType that identifies value's type.
 */
-JS_EXPORT JSType JSValueGetType(JSContextRef ctx, JSValueRef);
+JS_EXPORT JSType JSValueGetType(JSContextRef ctx, JSValueRef value);
 
 /*!
 @function
